--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,11 +3,11 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="teal_200">#000000</color>
+    <color name="teal_700">#000000</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="primary_color">#00C9BB</color>
+    <color name="primary_color">#0088FF</color>
     <color name="grey">#888888</color>
-    <color name="grey_light">#F0F0F0</color>
+    <color name="grey_light">#EBEBEB</color>
 </resources>
